// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Headers|PageHeader with subtitle 1`] = `
<PageHeader
  subtitle="Here is a subtitle"
>
  <header
    className="py-10 px-5 bg-gray-300"
  >
    <h1
      className="title m-auto max-w-5xl"
    >
      Hello World
    </h1>
    <p
      className="m-auto max-w-5xl"
    >
       
      Here is a subtitle
    </p>
  </header>
</PageHeader>
`;

exports[`Storyshots Headers|PageHeader with text content 1`] = `
<PageHeader>
  <header
    className="py-10 px-5 bg-gray-300"
  >
    <h1
      className="title m-auto max-w-5xl"
    >
      Hello World
    </h1>
  </header>
</PageHeader>
`;
